// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`myfares pages productDetails should render correctly 1`] = `
<TwoThirdsLayout
  description="Product Details page of the Create Fares Data Service"
  errors={Array []}
  title="Product Details - Create Fares Data Service"
>
  <BackButton
    href="/products/pointToPointProducts?serviceId=1"
  />
  <div
    className="dft-flex"
  >
    <h1
      className="govuk-heading-l"
      id="product-name-header"
    >
      Carnet Return Test
    </h1>
    <button
      className="govuk-link govuk-body align-top button-link govuk-!-margin-left-2"
      id="edit-product-name"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
  <div
    className="govuk-hint"
    id="product-status"
  >
    Product status: 
    <strong
      className="govuk-tag govuk-tag--turquoise"
    >
      Active
    </strong>
    <strong
      className="govuk-tag govuk-tag--yellow govuk-!-margin-left-2"
    >
      Needs attention
    </strong>
  </div>
  <dl
    className="govuk-summary-list"
    key="Service"
  >
    <div
      className="govuk-summary-list__row"
      key="Service"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Service
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="services"
          key="19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)"
        >
          19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Passenger type"
  >
    <div
      className="govuk-summary-list__row"
      key="Passenger type"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Passenger type
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="passenger-type"
            key="Adult Test"
          >
            Adult Test
          </span>
          <a
            href="/selectPassengerType"
            id="passenger-type-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Time restriction"
  >
    <div
      className="govuk-summary-list__row"
      key="Time restriction"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Time restriction
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="time-restriction"
          key="N/A"
        >
          N/A
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Quantity in bundle"
  >
    <div
      className="govuk-summary-list__row"
      key="Quantity in bundle"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Quantity in bundle
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="quantity-in-bundle"
            key="2"
          >
            2
          </span>
          <a
            href="/editCarnetProperties"
            id="quantity-in-bundle-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Carnet expiry"
  >
    <div
      className="govuk-summary-list__row"
      key="Carnet expiry"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Carnet expiry
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="carnet-expiry"
            key="22 year(s)"
          >
            22 year(s)
          </span>
          <a
            href="/editCarnetProperties"
            id="carnet-expiry-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Purchase methods"
  >
    <div
      className="govuk-summary-list__row"
      key="Purchase methods"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Purchase methods
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="purchase-methods"
            key="SOP Test 1"
          >
            SOP Test 1
          </span>
          <span
            id="purchase-methods"
            key="SOP Test 2"
          >
            SOP Test 2
          </span>
          <a
            href="/selectPurchaseMethods"
            id="purchase-methods-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Start date"
  >
    <div
      className="govuk-summary-list__row"
      key="Start date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Start date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="start-date"
            key="18/10/2021"
          >
            18/10/2021
          </span>
          <a
            href="/productDateInformation"
            id="start-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="End date"
  >
    <div
      className="govuk-summary-list__row"
      key="End date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        End date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="end-date"
            key="18/10/2121"
          >
            18/10/2121
          </span>
          <a
            href="/productDateInformation"
            id="end-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="cap"
  >
    <div
      className="govuk-summary-list__row"
      key="cap"
    >
      <dt
        className="govuk-summary-list__key"
      >
        cap
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="cap"
          key="Cap 1 - £2"
        >
          Cap 1 - £2
        </span>
      </dd>
    </div>
  </dl>
</TwoThirdsLayout>
`;

exports[`myfares pages productDetails should render correctly for a copied product 1`] = `
<TwoThirdsLayout
  description="Product Details page of the Create Fares Data Service"
  errors={Array []}
  title="Product Details - Create Fares Data Service"
>
  <BackButton
    href="/products/pointToPointProducts?serviceId=1"
  />
  <InformationSummary
    informationText="This is a copy of the product you selected. Edit one or more of the fields as required."
  />
  <div
    className="dft-flex"
  >
    <h1
      className="govuk-heading-l"
      id="product-name-header"
    >
      Carnet Return Test
    </h1>
    <button
      className="govuk-link govuk-body align-top button-link govuk-!-margin-left-2"
      id="edit-product-name"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
  <div
    className="govuk-hint"
    id="product-status"
  >
    Product status: 
    <strong
      className="govuk-tag govuk-tag--turquoise"
    >
      Active
    </strong>
    <strong
      className="govuk-tag govuk-tag--yellow govuk-!-margin-left-2"
    >
      Needs attention
    </strong>
  </div>
  <dl
    className="govuk-summary-list"
    key="Service"
  >
    <div
      className="govuk-summary-list__row"
      key="Service"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Service
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="services"
          key="19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)"
        >
          19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Passenger type"
  >
    <div
      className="govuk-summary-list__row"
      key="Passenger type"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Passenger type
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="passenger-type"
            key="Adult Test"
          >
            Adult Test
          </span>
          <a
            href="/selectPassengerType"
            id="passenger-type-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Time restriction"
  >
    <div
      className="govuk-summary-list__row"
      key="Time restriction"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Time restriction
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="time-restriction"
          key="N/A"
        >
          N/A
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Quantity in bundle"
  >
    <div
      className="govuk-summary-list__row"
      key="Quantity in bundle"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Quantity in bundle
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="quantity-in-bundle"
            key="2"
          >
            2
          </span>
          <a
            href="/editCarnetProperties"
            id="quantity-in-bundle-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Carnet expiry"
  >
    <div
      className="govuk-summary-list__row"
      key="Carnet expiry"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Carnet expiry
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="carnet-expiry"
            key="22 year(s)"
          >
            22 year(s)
          </span>
          <a
            href="/editCarnetProperties"
            id="carnet-expiry-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Purchase methods"
  >
    <div
      className="govuk-summary-list__row"
      key="Purchase methods"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Purchase methods
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="purchase-methods"
            key="SOP Test 1"
          >
            SOP Test 1
          </span>
          <span
            id="purchase-methods"
            key="SOP Test 2"
          >
            SOP Test 2
          </span>
          <a
            href="/selectPurchaseMethods"
            id="purchase-methods-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Start date"
  >
    <div
      className="govuk-summary-list__row"
      key="Start date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Start date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="start-date"
            key="18/10/2021"
          >
            18/10/2021
          </span>
          <a
            href="/productDateInformation"
            id="start-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="End date"
  >
    <div
      className="govuk-summary-list__row"
      key="End date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        End date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="end-date"
            key="18/10/2121"
          >
            18/10/2121
          </span>
          <a
            href="/productDateInformation"
            id="end-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
</TwoThirdsLayout>
`;

exports[`myfares pages productDetails should render correctly for a fare triangle modified product 1`] = `
<TwoThirdsLayout
  description="Product Details page of the Create Fares Data Service"
  errors={Array []}
  title="Product Details - Create Fares Data Service"
>
  <BackButton
    href="/products/multiOperatorProductsExternal"
  />
  <div
    className="dft-flex"
  >
    <h1
      className="govuk-heading-l"
      id="product-name-header"
    >
      Weekly Ticket
    </h1>
  </div>
  <div
    className="govuk-hint"
    id="product-status"
  >
    Product status: 
    <strong
      className="govuk-tag govuk-tag--yellow"
    >
      Incomplete
    </strong>
  </div>
  <dl
    className="govuk-summary-list"
    key="Fare type"
  >
    <div
      className="govuk-summary-list__row"
      key="Fare type"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Fare type
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="fare-type"
          key="Multi-operator"
        >
          Multi-operator
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="TEST services"
  >
    <div
      className="govuk-summary-list__row"
      key="TEST services"
    >
      <dt
        className="govuk-summary-list__key"
      >
        TEST services
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="selected-services"
          key="12A, 6, 101"
        >
          12A, 6, 101
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Exempt stops"
  >
    <div
      className="govuk-summary-list__row"
      key="Exempt stops"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Exempt stops
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="exempt-stops"
          key="N/A"
        >
          N/A
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Passenger type"
  >
    <div
      className="govuk-summary-list__row"
      key="Passenger type"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Passenger type
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="passenger-type"
          key="Test Passenger Type"
        >
          Test Passenger Type
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Time restriction"
  >
    <div
      className="govuk-summary-list__row"
      key="Time restriction"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Time restriction
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="time-restriction"
          key="Test Time Restriction"
        >
          Test Time Restriction
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="WBTR services"
  >
    <div
      className="govuk-summary-list__row"
      key="WBTR services"
    >
      <dt
        className="govuk-summary-list__key"
      >
        WBTR services
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="additional-operators-services"
          key=""
        />
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="BLAC services"
  >
    <div
      className="govuk-summary-list__row"
      key="BLAC services"
    >
      <dt
        className="govuk-summary-list__key"
      >
        BLAC services
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="additional-operators-services"
          key=""
        />
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="TESTSCHEME services"
  >
    <div
      className="govuk-summary-list__row"
      key="TESTSCHEME services"
    >
      <dt
        className="govuk-summary-list__key"
      >
        TESTSCHEME services
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="additional-operators-services"
            key=""
          />
          <a
            href="/multiOperatorServiceList"
            id="additional-operators-services-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Period duration"
  >
    <div
      className="govuk-summary-list__row"
      key="Period duration"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Period duration
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="period-duration"
          key="5 weeks"
        >
          5 weeks
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Product expiry"
  >
    <div
      className="govuk-summary-list__row"
      key="Product expiry"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Product expiry
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="product-expiry"
          key="Fare day end"
        >
          Fare day end
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Purchase methods"
  >
    <div
      className="govuk-summary-list__row"
      key="Purchase methods"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Purchase methods
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="purchase-methods"
          key="SOP 2"
        >
          SOP 2
        </span>
        <span
          id="purchase-methods"
          key="SOP 1"
        >
          SOP 1
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Start date"
  >
    <div
      className="govuk-summary-list__row"
      key="Start date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Start date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="start-date"
          key="17/12/2020"
        >
          17/12/2020
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="End date"
  >
    <div
      className="govuk-summary-list__row"
      key="End date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        End date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="end-date"
          key="18/12/2020"
        >
          18/12/2020
        </span>
      </dd>
    </div>
  </dl>
</TwoThirdsLayout>
`;

exports[`myfares pages productDetails should render correctly for a multi-operator product shared with you 1`] = `
<TwoThirdsLayout
  description="Product Details page of the Create Fares Data Service"
  errors={Array []}
  title="Product Details - Create Fares Data Service"
>
  <BackButton
    href="/products/pointToPointProducts?serviceId=1"
  />
  <InformationSummary
    informationText="This is a copy of the product you selected. Edit one or more of the fields as required."
  />
  <div
    className="dft-flex"
  >
    <h1
      className="govuk-heading-l"
      id="product-name-header"
    >
      Carnet Return Test
    </h1>
  </div>
  <div
    className="govuk-hint"
    id="product-status"
  >
    Product status: 
    <strong
      className="govuk-tag govuk-tag--yellow"
    >
      Incomplete
    </strong>
    <strong
      className="govuk-tag govuk-tag--yellow govuk-!-margin-left-2"
    >
      Needs attention
    </strong>
  </div>
  <dl
    className="govuk-summary-list"
    key="Service"
  >
    <div
      className="govuk-summary-list__row"
      key="Service"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Service
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="services"
          key="19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)"
        >
          19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Passenger type"
  >
    <div
      className="govuk-summary-list__row"
      key="Passenger type"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Passenger type
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="passenger-type"
            key="Adult Test"
          >
            Adult Test
          </span>
          <a
            href="/selectPassengerType"
            id="passenger-type-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Time restriction"
  >
    <div
      className="govuk-summary-list__row"
      key="Time restriction"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Time restriction
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="time-restriction"
          key="N/A"
        >
          N/A
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Quantity in bundle"
  >
    <div
      className="govuk-summary-list__row"
      key="Quantity in bundle"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Quantity in bundle
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="quantity-in-bundle"
            key="2"
          >
            2
          </span>
          <a
            href="/editCarnetProperties"
            id="quantity-in-bundle-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Carnet expiry"
  >
    <div
      className="govuk-summary-list__row"
      key="Carnet expiry"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Carnet expiry
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="carnet-expiry"
            key="22 year(s)"
          >
            22 year(s)
          </span>
          <a
            href="/editCarnetProperties"
            id="carnet-expiry-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Purchase methods"
  >
    <div
      className="govuk-summary-list__row"
      key="Purchase methods"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Purchase methods
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="purchase-methods"
            key="SOP Test 1"
          >
            SOP Test 1
          </span>
          <span
            id="purchase-methods"
            key="SOP Test 2"
          >
            SOP Test 2
          </span>
          <a
            href="/selectPurchaseMethods"
            id="purchase-methods-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Start date"
  >
    <div
      className="govuk-summary-list__row"
      key="Start date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Start date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="start-date"
            key="18/10/2021"
          >
            18/10/2021
          </span>
          <a
            href="/productDateInformation"
            id="start-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="End date"
  >
    <div
      className="govuk-summary-list__row"
      key="End date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        End date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="end-date"
            key="18/10/2121"
          >
            18/10/2121
          </span>
          <a
            href="/productDateInformation"
            id="end-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
</TwoThirdsLayout>
`;

exports[`myfares pages productDetails should render correctly while the cannot generate return popup is open 1`] = `
<TwoThirdsLayout
  description="Product Details page of the Create Fares Data Service"
  errors={Array []}
  title="Product Details - Create Fares Data Service"
>
  <BackButton
    href="/products/pointToPointProducts?serviceId=1"
  />
  <div
    className="dft-flex"
  >
    <h1
      className="govuk-heading-l"
      id="product-name-header"
    >
      Carnet Return Test
    </h1>
    <button
      className="govuk-link govuk-body align-top button-link govuk-!-margin-left-2"
      id="edit-product-name"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
  <div
    className="govuk-hint"
    id="product-status"
  >
    Product status: 
    <strong
      className="govuk-tag govuk-tag--turquoise"
    >
      Active
    </strong>
    <strong
      className="govuk-tag govuk-tag--yellow govuk-!-margin-left-2"
    >
      Needs attention
    </strong>
  </div>
  <dl
    className="govuk-summary-list"
    key="Service"
  >
    <div
      className="govuk-summary-list__row"
      key="Service"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Service
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="services"
          key="19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)"
        >
          19 - STAINING - BLACKPOOL via Victoria Hospital (Main Entrance)
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Passenger type"
  >
    <div
      className="govuk-summary-list__row"
      key="Passenger type"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Passenger type
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="passenger-type"
            key="Adult Test"
          >
            Adult Test
          </span>
          <a
            href="/selectPassengerType"
            id="passenger-type-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Time restriction"
  >
    <div
      className="govuk-summary-list__row"
      key="Time restriction"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Time restriction
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="time-restriction"
          key="N/A"
        >
          N/A
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Quantity in bundle"
  >
    <div
      className="govuk-summary-list__row"
      key="Quantity in bundle"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Quantity in bundle
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="quantity-in-bundle"
            key="2"
          >
            2
          </span>
          <a
            href="/editCarnetProperties"
            id="quantity-in-bundle-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Carnet expiry"
  >
    <div
      className="govuk-summary-list__row"
      key="Carnet expiry"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Carnet expiry
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="carnet-expiry"
            key="22 year(s)"
          >
            22 year(s)
          </span>
          <a
            href="/editCarnetProperties"
            id="carnet-expiry-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Purchase methods"
  >
    <div
      className="govuk-summary-list__row"
      key="Purchase methods"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Purchase methods
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <span
          id="purchase-methods"
          key="SOP Test 1"
        >
          SOP Test 1
        </span>
        <span
          id="purchase-methods"
          key="SOP Test 2"
        >
          SOP Test 2
        </span>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="Start date"
  >
    <div
      className="govuk-summary-list__row"
      key="Start date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        Start date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="start-date"
            key="18/10/2021"
          >
            18/10/2021
          </span>
          <a
            href="/productDateInformation"
            id="start-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
  <dl
    className="govuk-summary-list"
    key="End date"
  >
    <div
      className="govuk-summary-list__row"
      key="End date"
    >
      <dt
        className="govuk-summary-list__key"
      >
        End date
      </dt>
      <dd
        className="govuk-summary-list__value"
      >
        <div
          className="dft-flex dft-flex-justify-space-between"
        >
          <span
            id="end-date"
            key="18/10/2121"
          >
            18/10/2121
          </span>
          <a
            href="/productDateInformation"
            id="end-date-link"
          >
            Edit
          </a>
        </div>
      </dd>
    </div>
  </dl>
</TwoThirdsLayout>
`;
